

<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="customize_pizza">Customize Your Pizza</string>
    <string name="deluxe_pizza">Deluxe</string>
    <string name="hawaiian_pizza">Hawaiian</string>
    <string name="pepperoni_pizza">Pepperoni</string>
    <string name="order_pizza">Add Pizza</string>
    <string name="phone_number">enter your phone number</string>
    <string name="pick_pizza">Pick Your Pizza</string>
    <string name="store_orders">Store Orders</string>
    <string name="current_order">Current Order</string>
    <string name="PEPPERONI">Pepperoni</string>
    <string name="MUSHROOMS">Mushrooms</string>
    <string name="ONIONS">Onions</string>
    <string name="SAUSAGE">Sausage</string>
    <string name="BACON">Bacon</string>
    <string name="EXTRACHEESE">ExtraCheese</string>
    <string name="OLIVES">Olives</string>
    <string name="PEPPERS">Peppers</string>
    <string name="PINEAPPLE">Pineapple</string>
    <string name="CHICKEN">Chicken</string>
    <string name="JALAPENOS">Jalapenos</string>
    <string name="choose_toppings">Choose Your Toppings:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="cancel">Cancel</string>
    <string name="export">Export</string>
    <string name="total">Total (including tax)</string>
    <string name="remove">Remove Selected</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza_text">Are you sure you want to remove this item?</string>
    <string name="remove_pizza_title">Remove Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_phone_number">Please enter a phone number.</string>
    <string name="phone_number_ten_digits">Phone numbers must be 10 digits.</string>
    <string name="phone_number_only_digits">Please use only digits for your phone number.</string>
    <string name="add_pizza_to_start_order">Add a pizza to start your order.</string>
    <string name="add_pizza_error_occurred">An error occurred when adding your pizza. Please try again.</string>
    <string name="max_seven_toppings_error">Can not add more than 7 toppings.</string>
    <string-array name="pizza_sizes">
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>
</resources>